[package]
name = "inlet"
version = "0.3.0"
edition = "2024"
description = "Input management with configurable bindings for Bevy game engine."
authors = ["Dev <devlynknelson@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devlyn-Nelson/inlet"
categories = ["games", "game-development"]
keywords = ["bevy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.18"
default-features = false
features = ["keyboard", "mouse", "gamepad", "bevy_log"]

[dev-dependencies.bevy]
version = "0.18"
default-features = true
